# python-project-83

./: .gitignore  README.md  app.py  database.sql  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
page_analyzer/: app.py  database.py  page_checker.py  urls_repository.py  utils.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
