[project]
name = "python-project-83"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "flake8>=7.1.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
